--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 .Rhistory
 .RData
 .Ruserdata
+.Rproj.user
+.Rhistory 
+.RData
+.Ruserdata
+IMG_7273.jpg
+Notes/**
+Papers/**
+Protocols/**
+future_is_annex/**
+image_analysis/**
+nlgn2_chromhmm/**
